--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.scss
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.scss
@@ -34,3 +34,12 @@
     transform: translate(-50%, -50%);
     z-index: 5;
 }
+
+.mat-elevation-z8{
+  width: 100%;
+  overflow: scroll;
+  mat-paginator{
+    display: initial !important;
+  }
+}
+
