change in add reservation ui

--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -270,11 +270,11 @@
                             </table>
                             <!-- <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
                          -->
-                            <!-- <mat-paginator #paginator [pageSize]="pageSize" aria-label="Select page">
-                            </mat-paginator> -->
-                            <mat-paginator #paginator [length]="totalRows"  (page)="pageChangeEvent($event)"
-                            aria-label="Select page">
+                            <mat-paginator #paginator [pageSize]="pageSize" aria-label="Select page">
                             </mat-paginator>
+                            <!-- <mat-paginator #paginator [length]="totalRows"  (page)="pageChangeEvent($event)"
+                            aria-label="Select page">
+                            </mat-paginator> -->
                         </div>
                     </mat-card-content>
                 </mat-card>
