--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -290,7 +290,7 @@
                 <div class="example-container mt-3  ">
                     <div class="col-12 d-flex justify-content-end">
                         <button type="submit" class="btn-primary btn text-capitalize px-4"
-                            [disabled]="myform.invalid">submit</button>
+                            [disabled]="myform.invalid">Submit</button>
                     </div>
                 </div>
             </mat-card-footer>
