--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -17,7 +17,7 @@
 			<h2 style="text-align: center;color:#f2be1a; font-size: 25px;" class="text-capitalize"><b>Reservation
 					Name:{{group_name}}</b></h2>
 			<h2 style="text-align: center;color:#f2be1a; font-size: 16px;" class="text-capitalize mt-0 pt-0 mb-0 pb-0">
-				<b>{{selectedBlockchainAccount ? 'Metamask connected Account'+selectedBlockchainAccount : 'Please selectaccount in Metamask'}}<button *ngIf="!checkMetamaskConnected()"
+				<b>{{selectedBlockchainAccount ? 'Metamask connected Account'+selectedBlockchainAccount : 'Please select account in Metamask'}}<button *ngIf="!checkMetamaskConnected()"
 						(click)="selectAccountAddressFromMetamask()" class="btn-sm button-click-here text-info"> Click
 						here</button> </b>
 			</h2>
@@ -31,14 +31,14 @@
 				<mat-card-header class="">
 					<div class="col-12">
 						<mat-card-title class=" d-flex justify-content-between align-items-center">
-							<h4>Reservation certificate generate cycle information</h4>
+							<h4>Reservation Certificate Generate Cycle Information</h4>
 						</mat-card-title>
 					</div>
 				</mat-card-header>
 				<mat-card-content >
 
 					<div>
-						<h4 style="text-align: center;color:#f2be1a; font-size: 15px;">Ongoing Next Issuance cycle</h4>
+						<h4 style="text-align: center;color:#f2be1a; font-size: 15px;">Ongoing Next Issuance Cycle</h4>
 						<table class="mt-2">
 							<thead>
 								<tr>
@@ -59,7 +59,7 @@
 								</tr>
 								<tr *ngIf="ongoingnextissuance===null">
 
-									<td>No next issuance</td>
+									<td>No next Issuance</td>
 
 
 								</tr>
@@ -70,7 +70,7 @@
 					</div>
 					<hr>
 					<div>
-						<h4 style="text-align: center;color:#f2be1a; font-size: 15px;">History certificate Issuance Jobs
+						<h4 style="text-align: center;color:#f2be1a; font-size: 15px;">History Certificate Issuance Jobs
 						</h4>
 
 						<table class="mt-2">
