--- a/apps/drec-angular-ui/src/app/nav/header/header.component.html
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.html
@@ -4,7 +4,7 @@
   <mat-toolbar-row>
     <!-- logo -->
     <div class="me-3">
-      <img src="assets/images/d-rec.jpg" alt="" style="width: 130px;"/>
+      <img src="assets/images/d-logo.svg" alt="" />
       <!-- <svg xmlns="http://www.w3.org/2000/svg" class="py-1" width="100%" height="45" viewBox="0 0 151 48">
         <path
           d="M16.7,28.5V26.1a.58.58,0,0,0-.59-.58H13.7a.58.58,0,0,0-.57.58v2.4a.58.58,0,0,0,.58.58h2.41a.59.59,0,0,0,.58-.58"
