--- a/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
@@ -149,7 +149,7 @@
                 <div class="example-container mb-3 me-3 row">
                     <div class="col-12 d-flex justify-content-end">
                         <button type="submit" [disabled]="readForm.invalid"
-                            class="btn-primary btn text-capitalize px-4">submit</button>
+                            class="btn-primary btn text-capitalize px-4">Submit</button>
                     </div>
                 </div>
             </mat-card-footer>
