--- a/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
@@ -74,7 +74,7 @@
                 <div class="d-flex align-items-center justify-content-end">
                     <div class="me-3">
                         <button class="btn-primary btn text-capitalize px-4"
-                            (click)="getPagedData()">filter</button>
+                            (click)="getPagedData()">Filter</button>
                     </div>
                     <div class="">
                         <button class="btn-dark btn text-capitalize px-4"
