--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -32,7 +32,7 @@
                                 <mat-form-field>
                                     <mat-label class="text-capitalize">Select country Code</mat-label>
                                     <input type="text" placeholder="Please Enter countryCode" aria-label="text" matInput
-                                        formControlName="countryCode" [matAutocomplete]="auto" multiple>
+                                        formControlName="countryCode" (ngModelChange)="checkFormValidity()" [matAutocomplete]="auto" multiple>
                                     <mat-autocomplete #auto="matAutocomplete">
                                         <mat-option *ngFor="let code of filteredOptions | async" [value]="code.alpha3">
                                             {{code.country}}
@@ -56,7 +56,7 @@
                                 <mat-form-field>
                                     <mat-label class="text-capitalize">Fuel Code</mat-label>
 
-                                    <mat-select formControlName='fuelCode' placeholder="fuelCode" multiple>
+                                    <mat-select formControlName='fuelCode' (ngModelChange)="checkFormValidity()"  multiple>
 
                                         <mat-option *ngFor="let code of fuellist" [value]="code.code">
                                             {{code.name}}
@@ -68,9 +68,9 @@
 
                             <div class="col-md-3">
                                 <mat-form-field>
-                                    <mat-label class="text-capitalize">off Taker</mat-label>
+                                    <mat-label class="text-capitalize">Off Taker</mat-label>
 
-                                    <mat-select formControlName='offTaker' placeholder="offTaker" multiple>
+                                    <mat-select formControlName='offTaker' (ngModelChange)="checkFormValidity()" multiple>
 
                                         <mat-option *ngFor="let code of offtaker" [value]="code">
                                             {{code}}
@@ -82,7 +82,7 @@
                                 <mat-form-field>
                                     <mat-label class="text-capitalize">SDG Benefits</mat-label>
 
-                                    <mat-select formControlName="SDGBenefits" multiple>
+                                    <mat-select formControlName="SDGBenefits" (ngModelChange)="checkFormValidity()" multiple>
 
                                         <mat-option *ngFor="let sdgb of sdgblist"
                                             [value]="sdgb.value">{{sdgb.value}}</mat-option>
@@ -95,7 +95,7 @@
                                     <mat-label class="text-capitalize">Start Date </mat-label>
                                     <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date"
                                         formControlName="reservationStartDate" autocomplete="off"
-                                        (ngModelChange)="onEndChangeEvent($event)">
+                                        (ngModelChange)="onEndChangeEvent($event);checkFormValidity()">
                                     <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
                                     <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false"
                                         [stepHour]="1" [stepMinute]="1" [stepSecond]="1" [touchUi]="false"
@@ -120,7 +120,7 @@
                             </div>
                             <div class="col-md-6 d-flex flex-column">
                                 <span>Reservation Status:</span>
-                                <mat-radio-group formControlName='reservationActive'>
+                                <mat-radio-group formControlName='reservationActive' (ngModelChange)="checkFormValidity()">
 
 
                                     <mat-radio-button value="All">All</mat-radio-button>
@@ -133,10 +133,10 @@
                             <div class="col-md-12 mb-3  d-flex justify-content-end">
                                 <div class="">
                                     <button class="btn-primary me-2 btn text-capitalize px-4"
-                                        (click)="DisplayList()">filter</button>
+                                    [disabled]="!isAnyFieldFilled" (click)="formfilter()">filter</button>
                                 </div>
                                 <div class="">
-                                    <button class="btn-dark btn text-capitalize px-4" (click)="reset()">Reset</button>
+                                    <button class="btn-dark btn text-capitalize px-4" [disabled]="!isAnyFieldFilled" (click)="reset()">Reset</button>
                                 </div>
 
 
@@ -249,8 +249,10 @@
                         <!-- <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td> -->
                     </tr>
                 </table>
-                <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
-
+                <!-- <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator> -->
+                <mat-paginator  [length]="totalRows" [pageSize]="pageSize" (page)="pageChangeEvent($event)"
+                aria-label="Select page">
+              </mat-paginator>
             </div>
 
 
@@ -389,12 +391,12 @@
                     <!-- Fruit Column -->
                     <ng-container matColumnDef="createdAt">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> On Boarding Date </th>
-                        <td mat-cell *matCellDef="let row"> {{row.createdAt| date:'EEE d MMM y hh:mm:ss'}} </td>
+                        <td mat-cell *matCellDef="let row"> {{row.createdAt| date:'EEE d MMM y'}} </td>
                     </ng-container>
                     <!-- Fruit Column -->
                     <ng-container matColumnDef="commissioningDate">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Commissioning Date </th>
-                        <td mat-cell *matCellDef="let row"> {{row.commissioningDate| date:'EEE d MMM y hh:mm:ss'}} </td>
+                        <td mat-cell *matCellDef="let row"> {{row.commissioningDate| date:'EEE d MMM'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="offTaker">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> OffTaker </th>
