--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.scss
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.scss
@@ -174,8 +174,8 @@ table {
   }
   
   .certificate-id-text{
-    left: 38px;
-    top: 25px;
+    left: 35%;
+    top: 11px;
     position: absolute;
     color: #f7360ad6;
     font-size: 16px;
@@ -453,3 +453,12 @@ table {
 .bottom-nav li:nth-child(3)::before {
   background-color: #ef5da8;
 }
+
+// this is for spinner 
+mat-progress-spinner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  }
