--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -105,4 +105,12 @@ $secondary: #010101;
   mat-paginator{
     display: initial !important;
   }
+
+
+}
+.thead-width{
+  table{
+    width: 1256px;
+  }
+  
 }
