--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -372,7 +372,7 @@
             <hr>
             <!-- <mat-progress-spinner [mode]="'indeterminate'" *ngIf="isLoadingResults"></mat-progress-spinner>
              -->
-            <div class="content mat-elevation-z8 d-flex flex-column">
+            <div class="content mat-elevation-z8 thead-width d-flex flex-column">
                 <table mat-table [dataSource]="dataSource1" matSort>
                     <ng-container matColumnDef="projectName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>Project Name </th>
