--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
@@ -8,8 +8,8 @@
       <hr>
       <mat-card-content>
        
-        <div class="content mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+        <div class="content mat-elevation-z8 thead-width">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 " matSort>
           
             <ng-container matColumnDef="certificateId">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> CertificateId </th>
