--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.scss
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.scss
@@ -25,4 +25,10 @@
     .mat-mdc-paginator{
         display: initial !important;
     }
+    .thead-width{
+        table{
+          width: 1513px;
+        }
+        
+      }
 }
