--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -396,7 +396,7 @@
                     <!-- Fruit Column -->
                     <ng-container matColumnDef="commissioningDate">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Commissioning Date </th>
-                        <td mat-cell *matCellDef="let row"> {{row.commissioningDate| date:'EEE d MMM'}} </td>
+                        <td mat-cell *matCellDef="let row"> {{row.commissioningDate| date:'EEE d MMM y'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="offTaker">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> OffTaker </th>
