--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -48,22 +48,6 @@
     --vp-c-brand-2: #c47f2e;
     --vp-c-brand-3: #eac046;
     /* --vp-c-brand-soft: var(--vp-c-indigo-soft); */
-
-    /* Custom block colors inspired by Github colors*/
-    --vp-custom-block-info-border: transparent;
-    --vp-custom-block-info-text: var(--vp-c-text-1);
-    --vp-custom-block-info-bg: var(--vp-c-indigo-soft);
-    --vp-custom-block-info-code-bg: var(--vp-c-indigo-soft);
-
-    --vp-custom-block-note-border: transparent;
-    --vp-custom-block-note-text: var(--vp-c-text-1);
-    --vp-custom-block-note-bg: var(--vp-c-default-soft);
-    --vp-custom-block-note-code-bg: var(--vp-c-default-soft);
-
-    --vp-custom-block-tip-border: transparent;
-    --vp-custom-block-tip-text: var(--vp-c-text-1);
-    --vp-custom-block-tip-bg: var(--vp-c-green-soft);
-    --vp-custom-block-tip-code-bg: var(--vp-c-green-soft);
 }
 
 /**
@@ -83,4 +67,76 @@
         var(--vp-c-brand-1) 100%
     );
     --vp-home-hero-image-filter: blur(44px);
+}
+
+/**
+ * Component: Custom Block
+ * -------------------------------------------------------------------------- */
+:root {
+    /* Custom block colors inspired by Github colors*/
+    --vp-custom-block-info-border: transparent;
+    --vp-custom-block-info-text: var(--vp-c-text-1);
+    --vp-custom-block-info-bg: var(--vp-c-indigo-soft);
+    --vp-custom-block-info-code-bg: var(--vp-c-indigo-soft);
+
+    --vp-custom-block-note-border: transparent;
+    --vp-custom-block-note-text: var(--vp-c-text-1);
+    --vp-custom-block-note-bg: var(--vp-c-default-soft);
+    --vp-custom-block-note-code-bg: var(--vp-c-default-soft);
+
+    --vp-custom-block-tip-border: transparent;
+    --vp-custom-block-tip-text: var(--vp-c-text-1);
+    --vp-custom-block-tip-bg: var(--vp-c-green-soft);
+    --vp-custom-block-tip-code-bg: var(--vp-c-green-soft);
+}
+
+/* Docusaurus style borders */
+.custom-block.note {
+    border: 0px solid;
+    /* --vp-c-gray-1 is too light*/
+    border-color: var(--vp-c-gray-1);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.info {
+    border: 0px solid;
+    border-color: var(--vp-c-indigo-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.warning {
+    border: 0px solid;
+    border-color: var(--vp-c-yellow-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.tip {
+    border: 0px solid;
+    border-color: var(--vp-c-green-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.important {
+    border: 0px solid;
+    border-color: var(--vp-c-purple-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.caution {
+    border: 0px solid;
+    border-color: var(--vp-c-red-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
+}
+
+.custom-block.danger {
+    border: 0px solid;
+    border-color: var(--vp-c-red-3);
+    border-left-width: 5px;
+    box-shadow: var(--vp-shadow-1);
 }
